bdr.BDR2.scala.error
Erreur de compilation :
BDR2:2: error: type mismatch;
 found   : Unit
 required: Boolean
while (a= true) {
        ^